Correct top overflow images showcases

--- a/public/theme/boltcms-2021/css/app.css
+++ b/public/theme/boltcms-2021/css/app.css
@@ -1476,7 +1476,6 @@ blockquote::after {
 .item__img {
     --overflow: 40px;
     height: calc(100% + (2 * var(--overflow)));
-    top: calc(-1 * var(--overflow));
     width: 100%;
     position: absolute;
     background-image: var(--image);
